--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -465,50 +465,45 @@
       "cell_type": "code",
       "source": [
         "class GPTLanguageModel(nn.Module):\n",
-        "\n",
-        "    def __init__(self) -> None:\n",
+        "    def __init__(self, vocab_size, block_size, n_embd, n_head, n_layer, dropout, device):\n",
         "        super().__init__()\n",
-        "        # each token directly reads off the logits for the next token from a lookup table\n",
+        "\n",
+        "        self.device = device\n",
+        "\n",
         "        self.token_embedding_table = nn.Embedding(vocab_size, n_embd)\n",
         "        self.position_embedding_table = nn.Embedding(block_size, n_embd)\n",
+        "\n",
         "        self.blocks = nn.Sequential(\n",
-        "            *[Block(n_embd, n_head=n_head) for _ in range(n_layer)])\n",
+        "            *[Block(n_embd, n_head) for _ in range(n_layer)]\n",
+        "        )\n",
+        "\n",
         "        self.final_layer_norm = nn.LayerNorm(n_embd)\n",
         "        self.final_linear_layer = nn.Linear(n_embd, vocab_size)\n",
         "\n",
+        "        # Initialize weights\n",
         "        self.apply(self._init_weights)\n",
         "\n",
-        "    def _init_weights(self, module: nn.Module) -> None:\n",
+        "    # ⭐⭐⭐ THIS MUST BE INSIDE THE CLASS ⭐⭐⭐\n",
+        "    def _init_weights(self, module):\n",
         "        if isinstance(module, nn.Linear):\n",
-        "            torch.nn.init.normal_(module.weight, mean=0.0, std=0.02)\n",
+        "            nn.init.normal_(module.weight, mean=0.0, std=0.02)\n",
         "            if module.bias is not None:\n",
-        "                torch.nn.init.zeros_(module.bias)\n",
+        "                nn.init.zeros_(module.bias)\n",
         "        elif isinstance(module, nn.Embedding):\n",
-        "            torch.nn.init.normal_(module.weight, mean=0.0, std=0.02)\n",
+        "            nn.init.normal_(module.weight, mean=0.0, std=0.02)\n",
         "\n",
-        "    def forward(self, input_tokens: torch.Tensor, targets: Optional[torch.Tensor] = None) -> Tuple[torch.Tensor, Optional[torch.Tensor]]:\n",
-        "        \"\"\"\n",
-        "        Forward pass of the model.\n",
-        "\n",
-        "        Args:\n",
-        "            input_tokens: Tensor of token indices of shape (batch_size, sequence_length)\n",
-        "            targets: Optional tensor of target token indices of same shape as input_tokens\n",
-        "\n",
-        "        Returns:\n",
-        "            Tuple of (logits, loss) where logits has shape (batch_size, sequence_length, vocab_size)\n",
-        "            and loss is optional cross-entropy loss if targets are provided\n",
-        "        \"\"\"\n",
-        "\n",
+        "    def forward(self, input_tokens, targets=None):\n",
         "        B, T = input_tokens.shape\n",
         "\n",
-        "        # input_tokens and targets are both (B,T) tensor of integers\n",
-        "        token_embedding = self.token_embedding_table(input_tokens)  # (B,T,C)\n",
+        "        token_embedding = self.token_embedding_table(input_tokens)\n",
         "        positional_embedding = self.position_embedding_table(\n",
-        "            torch.arange(T, device=device))  # (T,C)\n",
-        "        x = token_embedding + positional_embedding  # (B,T,C)\n",
-        "        x = self.blocks(x)  # (B,T,C)\n",
-        "        x = self.final_layer_norm(x)  # (B,T,C)\n",
-        "        logits = self.final_linear_layer(x)  # (B,T,vocab_size)\n",
+        "            torch.arange(T, device=self.device)\n",
+        "        )\n",
+        "\n",
+        "        x = token_embedding + positional_embedding\n",
+        "        x = self.blocks(x)\n",
+        "        x = self.final_layer_norm(x)\n",
+        "        logits = self.final_linear_layer(x)\n",
         "\n",
         "        if targets is None:\n",
         "            loss = None\n",
@@ -520,40 +515,21 @@
         "\n",
         "        return logits, loss\n",
         "\n",
-        "    def generate(self, input_tokens: torch.Tensor, max_new_tokens: int) -> torch.Tensor:\n",
-        "        \"\"\"\n",
-        "                Generate new tokens given a context.\n",
-        "\n",
-        "                Args:\n",
-        "                        input_tokens: Starting token indices of shape (batch_size, sequence_length)\n",
-        "                        max_new_tokens: Number of new tokens to generate\n",
-        "\n",
-        "                Returns:\n",
-        "                        Tensor of token indices of shape (batch_size, sequence_length + max_new_tokens)\n",
-        "                \"\"\"\n",
-        "\n",
-        "        # input_tokens is (B, T) array of indices in the current context\n",
+        "    def generate(self, input_tokens, max_new_tokens):\n",
         "        for _ in range(max_new_tokens):\n",
-        "            # crop input_tokens to the last block_size tokens\n",
-        "            cropped_input = input_tokens[:, -block_size:]\n",
-        "            # get the predictions\n",
-        "            logits, _ = self(cropped_input)\n",
-        "            # focus only on the last time step\n",
-        "            logits = logits[:, -1, :]  # becomes (B, C)\n",
-        "            # apply softmax to get probabilities\n",
-        "            probs = F.softmax(logits, dim=-1)  # (B, C)\n",
-        "            # sample from the distribution\n",
-        "            idx_next = torch.multinomial(probs, num_samples=1)  # (B, 1)\n",
-        "            # append sampled index to the running sequence\n",
-        "            input_tokens = torch.cat(\n",
-        "                (input_tokens, idx_next), dim=1)  # (B, T+1)\n",
-        "        return input_tokens"
+        "            cropped = input_tokens[:, -block_size:]\n",
+        "            logits, _ = self(cropped)\n",
+        "            logits = logits[:, -1, :]\n",
+        "            probs = F.softmax(logits, dim=-1)\n",
+        "            next_token = torch.multinomial(probs, num_samples=1)\n",
+        "            input_tokens = torch.cat((input_tokens, next_token), dim=1)\n",
+        "        return input_tokens\n"
       ],
       "metadata": {
         "id": "8P9E19b4SU2n"
       },
       "id": "8P9E19b4SU2n",
-      "execution_count": null,
+      "execution_count": 58,
       "outputs": []
     },
     {
@@ -569,8 +545,15 @@
     {
       "cell_type": "code",
       "source": [
-        "model = GPTLanguageModel()\n",
-        "model = model.to(device)\n",
+        "model = GPTLanguageModel(\n",
+        "    vocab_size=vocab_size,\n",
+        "    block_size=block_size,\n",
+        "    n_embd=n_embd,\n",
+        "    n_head=n_head,\n",
+        "    n_layer=n_layer,\n",
+        "    dropout=dropout,\n",
+        "    device=device\n",
+        ").to(device)\n",
         "# print the number of parameters in the model\n",
         "print(sum(p.numel() for p in model.parameters())/1e6, 'M parameters')"
       ],
@@ -579,10 +562,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SXIKrHUxTzDd",
-        "outputId": "3092ab63-d94b-4174-b5e8-32d2479c4745"
+        "outputId": "21fed9d2-7971-4bd5-eca7-2fb31b7f2290"
       },
       "id": "SXIKrHUxTzDd",
-      "execution_count": null,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
@@ -621,10 +604,10 @@
         },
         "collapsed": true,
         "id": "bURQFkD7Xu2y",
-        "outputId": "ef6fa7a0-4855-462b-91f5-c7010bb3bcaf"
+        "outputId": "b1052d12-aaed-46d7-e88b-204b5f79e2d9"
       },
       "id": "bURQFkD7Xu2y",
-      "execution_count": null,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "stream",
@@ -659,10 +642,10 @@
         },
         "collapsed": true,
         "id": "RYE5jjrUaMDK",
-        "outputId": "3fa6b509-f8f1-4715-c2f4-fb7abdad243f"
+        "outputId": "778490dc-a449-4deb-aea7-1648c8b7520c"
       },
       "id": "RYE5jjrUaMDK",
-      "execution_count": null,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "stream",
@@ -967,10 +950,10 @@
           "height": 424
         },
         "id": "sPVv6Fa_bqyo",
-        "outputId": "f80ee06c-abc3-436d-c360-db7fc1386f22"
+        "outputId": "9d1068ac-f003-4d14-de3d-2f86362df8a2"
       },
       "id": "sPVv6Fa_bqyo",
-      "execution_count": null,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -993,7 +976,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-7cffab40-5037-44aa-a3b5-324bf86c57d4\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-3698a5bf-3c0f-4ae0-b01b-912a25651589\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1103,7 +1086,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7cffab40-5037-44aa-a3b5-324bf86c57d4')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3698a5bf-3c0f-4ae0-b01b-912a25651589')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1155,12 +1138,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-7cffab40-5037-44aa-a3b5-324bf86c57d4 button.colab-df-convert');\n",
+              "        document.querySelector('#df-3698a5bf-3c0f-4ae0-b01b-912a25651589 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-7cffab40-5037-44aa-a3b5-324bf86c57d4');\n",
+              "        const element = document.querySelector('#df-3698a5bf-3c0f-4ae0-b01b-912a25651589');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1180,8 +1163,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-5a1e115c-d58b-4c9a-ab45-42c9a96d5ec4\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5a1e115c-d58b-4c9a-ab45-42c9a96d5ec4')\"\n",
+              "    <div id=\"df-6d464811-e690-4bce-9b21-9deabcf170c8\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-6d464811-e690-4bce-9b21-9deabcf170c8')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1300,14 +1283,14 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-5a1e115c-d58b-4c9a-ab45-42c9a96d5ec4 button');\n",
+              "            document.querySelector('#df-6d464811-e690-4bce-9b21-9deabcf170c8 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
               "      </script>\n",
               "    </div>\n",
               "\n",
-              "  <div id=\"id_c5396058-150e-4c3b-9a1f-d8f6f7ebeb0d\">\n",
+              "  <div id=\"id_09b7c45a-812b-4d4d-a879-43d8e92cea64\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -1351,7 +1334,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_c5396058-150e-4c3b-9a1f-d8f6f7ebeb0d button.colab-df-generate');\n",
+              "        document.querySelector('#id_09b7c45a-812b-4d4d-a879-43d8e92cea64 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -1372,7 +1355,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 62
         }
       ]
     }
